# lisa_glitch_buster

./: .buildinfo  .gitignore  README.md  fred_fit_example.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: publish.yml  tests.yml
_sources/: index.md
docs/: _config.yml  _toc.yml  fred_fit_example.ipynb  index.md
docs/_static/: make_fred_anim.py
src/lisa_glitch_buster/: constants.py  data_generator.py  glitch_fitter.py  glitch_fitter_eryn.py  injection_generator.py  logger.py
src/lisa_glitch_buster/backend/: fisher.py  likelihood.py  priors.py  snr.py
src/lisa_glitch_buster/backend/model/: __init__.py  common.py  fred_pulse.py  sine_gaussian.py
src/lisa_glitch_buster/postproc/: __init__.py  image_utils.py  matplotlibrc  plot_collection_hist.py  plot_corner.py  pulse_plotter.py
studies/: run_glitches.py  run_glitches.sh
tests/: conftest.py  lisa.py  test_fit.py  test_model.py  test_pe.py
